--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "fond-of-spryker/conditional-availabilities-api",
-  "description": "Conditional availabilities api module",
+  "name": "fond-of-spryker/conditional-availabilities-bulk-api",
+  "description": "Conditional availabilities Bulk api module",
   "license": "MIT",
   "authors": [
     {
