--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "fond-of-spryker/conditional-availabilities-bulk-api",
-  "description": "Conditional availabilities Bulk api module",
+  "name": "fond-of-spryker/conditional-availability-bulk-api",
+  "description": "Conditional availability bulk api module",
   "license": "MIT",
   "authors": [
     {
@@ -9,17 +9,13 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.3",
     "spryker/api": "^0.1.0 || ^0.2.0 || ^0.3.0",
     "spryker/api-query-builder": "^0.1.0",
     "fond-of-spryker/conditional-availability": "dev-master"
   },
   "require-dev": {
-    "codeception/codeception": "^2.4",
-    "fond-of-codeception/spryker": "^1.0.0",
-    "php-coveralls/php-coveralls": "^2.1",
-    "phpro/grumphp": "^0.14",
-    "sebastian/phpcpd": "^4.0",
+    "fond-of-codeception/spryker": "^1.0",
     "spryker/code-sniffer": "^0.12"
   },
   "minimum-stability": "dev",
