--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,15 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
-    "spryker/api": "^0.1.0 || ^0.2.0 || ^0.3.0",
+    "php": ">=8.0",
+    "spryker/api": "^0.4.0",
+    "spryker/api-extension": "^0.1.0",
     "spryker/api-query-builder": "^0.1.0",
     "fond-of-spryker/conditional-availability": "dev-master",
     "spryker/product": "^6.4.0"
   },
   "require-dev": {
-    "fond-of-codeception/spryker": "^1.0",
+    "fond-of-codeception/spryker": "^1.0 || ^2.0.0",
     "spryker/code-sniffer": "*",
     "spryker-sdk/phpstan-spryker": "*"
   },
